crates/bitnet-prompt-templates/tests/snapshots/snapshot_wave33__w33_raw_simple_prompt.snap
---
source: crates/bitnet-prompt-templates/tests/snapshot_wave33.rs
expression: out
---
Hello, world!
