crates/bitnet-prompt-templates/tests/snapshots/snapshot_wave33__w33_stop_sequences_instruct.snap
---
source: crates/bitnet-prompt-templates/tests/snapshot_wave33.rs
expression: stops
---
[
    "\n\nQ:",
    "\n\nHuman:",
]
