crates/bitnet-prompt-templates/tests/snapshots/snapshot_wave33__w33_stop_sequences_llama3.snap
---
source: crates/bitnet-prompt-templates/tests/snapshot_wave33.rs
expression: stops
---
[
    "<|eot_id|>",
    "<|end_of_text|>",
]
