crates/bitnet-prompt-templates/tests/snapshots/snapshot_wave33__w33_template_info_instruct_debug.snap
---
source: crates/bitnet-prompt-templates/tests/snapshot_wave33.rs
expression: info
---
TemplateInfo {
    name: "instruct",
    stop_sequences: [
        "\n\nQ:",
        "\n\nHuman:",
    ],
    adds_bos: true,
    parses_special: false,
}
