crates/bitnet-prompt-templates/tests/snapshots/snapshot_wave33__w33_template_info_llama3_debug.snap
---
source: crates/bitnet-prompt-templates/tests/snapshot_wave33.rs
expression: info
---
TemplateInfo {
    name: "llama3-chat",
    stop_sequences: [
        "<|eot_id|>",
        "<|end_of_text|>",
    ],
    adds_bos: false,
    parses_special: true,
}
