crates/bitnet-prompt-templates/tests/snapshots/snapshot_wave33__w33_template_info_raw_debug.snap
---
source: crates/bitnet-prompt-templates/tests/snapshot_wave33.rs
expression: info
---
TemplateInfo {
    name: "raw",
    stop_sequences: [],
    adds_bos: true,
    parses_special: false,
}
