crates/bitnet-prompt-templates/tests/snapshots/snapshot_wave33__w33_template_type_display_variants.snap
---
source: crates/bitnet-prompt-templates/tests/snapshot_wave33.rs
expression: display
---
[
    "raw",
    "instruct",
    "llama3-chat",
    "phi4-chat",
    "qwen-chat",
    "gemma-chat",
    "mistral-chat",
    "deepseek-chat",
]
