crates/bitnet-prompt-templates/tests/snapshots/snapshot_wave33__w33_template_type_parse_unknown_error.snap
---
source: crates/bitnet-prompt-templates/tests/snapshot_wave33.rs
expression: truncated
---
Unknown template type: nonexistent-template. Supported: raw, instruct, llama3-chat, phi4-chat, qwen-...
